--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "dotdotdot-js": "^4.0.11",
     "gh-pages": "^3.0.0",
     "google-map-react": "^1.1.7",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.15",
     "lodash.isempty": "^4.4.0",
     "material-ui-image": "^3.2.3",
+    "notistack": "^0.9.17",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
